--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -4,30 +4,37 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:fillViewport="true">
+
   <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" android:background="#ffffff">
- 
-        <!--  Header  Starts-->
-        <LinearLayout android:id="@+id/header"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:background="@drawable/blueb" >
+        
+        <!-- <LinearLayout android:id="@+id/header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@layout/header_gradient"
                 android:paddingTop="5dip"
-                android:paddingBottom="5dip">
+                android:paddingBottom="5dip"> -->
                 
-                <!-- Logo Start-->
+            Login button
+
+        	
+                
+       <!-- </LinearLayout> -->
+        <!--         
+                Logo Start
 
 	            <ImageView
 	                android:layout_width="fill_parent"
 	                android:layout_height="fill_parent"
 	                android:src="@drawable/logo" />
 
-                            <!-- android:layout_marginLeft="5dip"/> -->
-                <!-- Logo Ends -->
+                            android:layout_marginLeft="5dip"/>
+                Logo Ends
         </LinearLayout>
-        <!--  Header Ends -->
-        <!-- Footer Start -->
+         Header Ends
+        Footer Start
         <LinearLayout android:id="@+id/footer"
             android:orientation="vertical"
             android:layout_width="fill_parent"
@@ -35,16 +42,16 @@
             android:background="#ffffff"
             android:layout_alignParentBottom="true">
         </LinearLayout>
-        <!-- Footer Ends -->
+        Footer Ends
  
-        <!-- Login Form -->
+        Login Form
         <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dip"
           android:layout_below="@id/header">
-          <!--  Email Label -->
+           Email Label
           <TextView android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#372c24"
@@ -54,7 +61,7 @@
                 android:layout_marginTop="5dip"
                 android:layout_marginBottom="20dip"
                 android:singleLine="true"/>
-          <!--  Password Label -->
+           Password Label
           <TextView android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#372c24"
@@ -64,13 +71,13 @@
                 android:layout_marginTop="5dip"
                 android:singleLine="true"
                 android:password="true"/>
-          <!-- Login button -->
+          Login button
           <Button android:id="@+id/btnLogin"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dip"
                 android:text="Login"/>
-          <!-- Link to Registration Screen -->
+          Link to Registration Screen
           <TextView android:id="@+id/link_to_register"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -79,9 +86,17 @@
                 android:text="New to ProjectX? Register here"
                 android:gravity="center"
                 android:textSize="20dip"
-                android:textColor="#0b84aa"/>
- 
-        </LinearLayout>
+                android:textColor="#0b84aa"/> -->
         <!-- Login Form Ends -->
+
+        	<Button
+        	    android:id="@+id/btnLogin"
+        	    android:layout_width="match_parent"
+        	    android:layout_height="wrap_content"
+        	    android:layout_centerHorizontal="true"
+        	    android:layout_centerVertical="true"
+        	    android:background="@drawable/foursquare"
+        	    android:maxWidth="@dimen/abc_action_bar_title_text_size" />
+
   </RelativeLayout>
 </ScrollView>
