--- a/res/layout/mylocation.xml
+++ b/res/layout/mylocation.xml
@@ -2,11 +2,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
+        <!-- Header -->
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+        />
+
+        <!-- Map -->
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+         />
+            <!--  android:layout_weight="1" -->
+        
+
+        <!-- Footer, or another embedded Layout -->
+        <ListView
+			android:id="@+id/lv_places"
+			android:layout_below="@id/map"
+			android:layout_marginTop="5dp"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+		/>
  
-    <fragment
+    <!--  <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/>-->
  
 </RelativeLayout>
