Making the list view clickable

--- a/res/layout/mylocation.xml
+++ b/res/layout/mylocation.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-        <!-- Header -->
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-        />
+    android:layout_height="fill_parent"
+    android:baselineAligned="false"
+    android:orientation="vertical"  >
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_weight="1.0"
+	    android:orientation="vertical" >        
 
         <!-- Map -->
         <fragment
@@ -15,20 +16,24 @@
             android:name="com.google.android.gms.maps.MapFragment"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
          />
             <!--  android:layout_weight="1" -->
-        
+     </LinearLayout>
 
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_weight="1.0"
+	    android:orientation="vertical" >        
+	
         <!-- Footer, or another embedded Layout -->
         <ListView
 			android:id="@+id/lv_places"
-			android:layout_below="@id/map"
 			android:layout_marginTop="5dp"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
-			android:layout_weight="1"
 		/>
+    </LinearLayout>
  
     <!--  <fragment
         android:id="@+id/map"
@@ -36,4 +41,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>-->
  
-</RelativeLayout>
+</LinearLayout>
