--- a/res/layout/nearby_list.xml
+++ b/res/layout/nearby_list.xml
@@ -16,45 +16,29 @@
 		android:textSize="12sp"
 		android:textColor="#88945f"/>
 
-	<TextView 
-		android:id="@+id/tv_name"
-		android:layout_toLeftOf="@id/tv_distance"
-		android:layout_alignParentLeft="true"
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content"
-		android:layout_marginRight="5dp"
-		android:layout_marginTop="10dp"
-		android:layout_marginLeft="10dp"
-		android:textSize="14sp" 
-		android:textColor="#ccc"  
-		android:text="Ciwalk"/>
-	
 	<TextView
-		android:id="@+id/tv_address"
-		android:layout_toLeftOf="@id/tv_distance"
-		android:layout_alignParentLeft="true"
-		android:layout_below="@id/tv_name"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginRight="5dp"
+	    android:id="@+id/tv_name"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentLeft="true"
+	    android:layout_marginLeft="10dp"
+	    android:layout_marginRight="5dp"
+	    android:layout_marginTop="10dp"
+	    android:layout_toLeftOf="@id/tv_distance"
+	    android:text="Ciwalk"
+	    android:textColor="#000"
+	    android:textSize="14sp" />
+	<TextView 
+	    android:id="@+id/tv_categories"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_toLeftOf="@id/tv_distance"
+	    android:layout_alignParentLeft="true"
+	    android:layout_below="@id/tv_name"
+	    android:layout_marginRight="5dp"
 		android:layout_marginTop="5dp"
 		android:layout_marginLeft="10dp"
 		android:textSize="14sp"
-		android:text="Jl. Cihampelas"
-		android:textColor="#ccc"/>
-	
-	<TextView
-		android:id="@+id/tv_here_now"
-		android:layout_toLeftOf="@id/tv_distance"
-		android:layout_alignParentLeft="true"
-		android:layout_below="@id/tv_address"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginRight="5dp"
-		android:layout_marginTop="5dp"
-		android:layout_marginLeft="10dp"
-		android:textSize="13sp"
-		android:text="(2 people here)"
-		android:textColor="#ccc"/>
+		android:textColor="#88945f"/>
 		
 </RelativeLayout>
