--- a/res/layout/mylocation.xml
+++ b/res/layout/mylocation.xml
@@ -9,7 +9,9 @@
         android:id="@+id/edittext"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"   
-        android:inputType="text" >
+        android:inputType="text" 
+        android:windowSoftInputMode="stateHidden"
+        android:hint="Search..">
     </EditText>
     
 	<LinearLayout
