--- a/res/layout/add_card.xml
+++ b/res/layout/add_card.xml
@@ -9,27 +9,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:entries="@array/banks"
-        android:prompt="@string/card_prompt" />
+        android:prompt="@string/card_prompt"
+        android:layout_marginTop="20dp" />
  
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp" />
  
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
     <Button
         android:id="@+id/btnSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
         android:text="Add Card" />
     
     <Button
         android:id="@+id/btnMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
         android:text="Home" />
     </LinearLayout>
     
