--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
-  android:fillViewport="true">
-
-  <RelativeLayout
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:background="@drawable/blueb" >
+  android:fillViewport="true"
+  android:orientation="vertical">
         
         <!-- <LinearLayout android:id="@+id/header"
                 android:layout_width="match_parent"
@@ -16,11 +12,6 @@
                 android:background="@layout/header_gradient"
                 android:paddingTop="5dip"
                 android:paddingBottom="5dip"> -->
-                
-            Login button
-
-        	
-                
        <!-- </LinearLayout> -->
         <!--         
                 Logo Start
@@ -89,14 +80,29 @@
                 android:textColor="#0b84aa"/> -->
         <!-- Login Form Ends -->
 
-        	<Button
-        	    android:id="@+id/btnLogin"
-        	    android:layout_width="match_parent"
-        	    android:layout_height="wrap_content"
-        	    android:layout_centerHorizontal="true"
-        	    android:layout_centerVertical="true"
-        	    android:background="@drawable/foursquare"
-        	    android:maxWidth="@dimen/abc_action_bar_title_text_size" />
+       	<Button
+       	    android:id="@+id/btnLogin"
+       	    android:layout_width="250dp"
+       	    android:layout_height="60dp"
+       	    android:layout_gravity="center_horizontal"
+       	    android:layout_marginBottom="30dp"
+       	    android:layout_marginLeft="70dp"
+       	    android:layout_marginRight="70dp"
+       	    android:layout_marginTop="150dp"
+       	    android:background="@drawable/foursquare" />
 
-  </RelativeLayout>
-</ScrollView>
+       	<!-- android:layout_centerHorizontal="true"
+       	    android:layout_centerVertical="true" -->
+       	<!-- <fragment android:name="com.facebook.scrumptious.SelectionFragment"
+             android:id="@+id/selectionFragment"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content" /> -->
+   		<fragment android:name="com.projectx.loginandmaps.SplashFragment"
+             android:id="@+id/splashFragment"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content" />
+   		<!-- <fragment android:name="com.facebook.widget.UserSettingsFragment"
+             android:id="@+id/userSettingsFragment"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content" /> -->
+</LinearLayout>
