--- a/res/layout/mylocation.xml
+++ b/res/layout/mylocation.xml
@@ -1,49 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:baselineAligned="false"
     android:orientation="vertical"  >
 
-    <!-- <EditText
-        android:id="@+id/edittext"
+    <TextView
+        android:id="@+id/offers"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"   
-        android:inputType="text" 
-        android:windowSoftInputMode="stateHidden"
-        android:hint="Search..">
-    </EditText> -->
+        android:layout_height="wrap_content" 
+        android:windowSoftInputMode="stateHidden">
+    </TextView>
     
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:layout_weight="1.0"
-	    android:orientation="vertical" >        
+	    android:orientation="vertical" >
 
-        <!-- Map -->
+        Map
         <fragment
             android:id="@+id/map"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             class="com.google.android.gms.maps.MapFragment"
          />
-            <!--  android:layout_weight="1" -->
+             android:layout_weight="1"
      </LinearLayout>
 
-	<LinearLayout
+	<!-- <LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:layout_weight="1.0"
 	    android:orientation="vertical" >        
 	
-        <!-- Footer, or another embedded Layout -->
+        Footer, or another embedded Layout
         <ListView
 			android:id="@+id/lv_places"
 			android:layout_marginTop="5dp"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 		/>
-    </LinearLayout>
+    </LinearLayout> -->
     
 	<LinearLayout android:id="@+id/footer" android:layout_width="fill_parent"
 	    android:layout_height="wrap_content" android:orientation="horizontal"
@@ -72,3 +75,12 @@
         android:layout_height="match_parent"/>-->
  
 </LinearLayout>
+<ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#111"/>
+</android.support.v4.widget.DrawerLayout>
